--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -12,6 +12,7 @@
 	
 	</head>
 <body>
+
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
@@ -47,126 +48,122 @@
 			</div>
 		</div>
 	</nav>
+
 	<main class="main__repro">
-
 		<div class="container">
-		<section id="heroReprocann" alt="Header Reprocann" class="sectionRepro0">
-
-		</section>		
+			<section id="heroReprocann" alt="Header Reprocann" class="sectionRepro0"></section>		
 		</div>
 
 		<div class="container">
-		<section class="sectionRepro1">
-				<h2>Así podes hacerlo:</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Suscipit expedita quia mollitia corrupti debitis ducimus facere enim. <br>
-				Dolorem quam, enim corrupti ullam maxime voluptates, eligendi sint vel veniam provident quos!</p>
-		</section>
+			<section class="sectionRepro1">
+					<h2>Así podes hacerlo:</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Suscipit expedita quia mollitia corrupti debitis ducimus facere enim. <br>
+					Dolorem quam, enim corrupti ullam maxime voluptates, eligendi sint vel veniam provident quos!</p>
+			</section>
 		</div>
 
 		<div class="container">
-		<section id="galeriaFotos">
+			<section id="galeriaFotos">
 
-			<div class="row">
+				<div class="row">
 
-				<div class="galeria1 col-md-4">
+					<div class="galeria1 col-md-4">
 
-					<div class="foto">
-						<img src="../img/reprocann/paso1.jpg" alt="Paso1">
+						<div class="foto">
+							<img src="../img/reprocann/paso1.jpg" alt="Paso1">
+						</div>
+
+						<div class="pie">
+							<p class="color-acento">Paso 1</p>
+							<ul>
+								<li>Crea un usuario en la APP MiArgentina</li>
+								<li>Ingresa <a href="https://www.argentina.gob.ar/miargentina" target="_blank"> Aquí</a></li>						
+							</ul>
+						</div>
+
 					</div>
 
-					<div class="pie">
-						<p class="color-acento">Paso 1</p>
-						<ul>
-							<li>Crea un usuario en la APP MiArgentina</li>
-							<li>Ingresa <a href="https://www.argentina.gob.ar/miargentina" target="_blank"> Aquí</a></li>						
-						</ul>
+					<div class="galeria2 col-md-4">
+
+						<div class="foto">
+							<img src="../img/reprocann/paso2.jpg" alt="Paso2">
+						</div>
+
+						<div class="pie">
+							<p class="color-acento">Paso 2</p>
+							<ul>
+								<li>Con tu usuario y contraseña</li>
+								<li>Registrate <a href="https://reprocann.msal.gob.ar/auth" target="_blank">Aquí</a></li>						
+							</ul>
+						</div>
+
 					</div>
 
+					<div class="galeria3 col-md-4">
+
+						<div class="foto">
+							<img src="../img/reprocann/paso3.jpg" alt="Paso3">
+						</div>
+
+						<div class="pie">
+							<p class="color-acento">Paso 3</p>
+							<ul>
+								<li>Selecciona la Preferencia de Cultivo:</li>
+								<li>Persona en tratamiento</li>
+								<li>Persona que cultiva para otro</li>						
+							</ul>
+						</div>
+
+					</div>
+
+					<div class="galeria4 col-md-4">
+
+						<div class="foto">
+							<img src="../img/reprocann/paso4.jpg" alt="Paso4">
+						</div>
+
+						<div class="pie">
+							<p class="color-acento">Paso 4</p>
+							<ul>
+								<li>Vinculación con Médico:</li>
+								<li>Utilizando el codigo generado por la App</li>
+								<li>Realiza la vinculación con un medico de confianza</li>
+														
+							</ul>
+						</div>
+
+					</div>
+
+					<div class="galeria5 col-md-4">
+
+						<div class="foto">
+							<img src="../img/reprocann/paso5.jpg" alt="Paso5">
+						</div>
+
+						<div class="pie">
+							<p class="color-acento">Listo!</p>					
+						</div>
+
+					</div>
+
+					<div class="galeria6 col-md-4">
+
+						<div class="foto">
+							<img src="../img/reprocann/paso6.jpg" alt="Paso6">
+						</div>
+
+						<div class="pie">
+							<p class="color-acento"><a href="../pages/contacto.html">Visítanos para abastecerte. Click Aquí</a></p>					
+						</div>
+
+					</div>
 				</div>
-
-				<div class="galeria2 col-md-4">
-
-					<div class="foto">
-						<img src="../img/reprocann/paso2.jpg" alt="Paso2">
-					</div>
-
-					<div class="pie">
-						<p class="color-acento">Paso 2</p>
-						<ul>
-							<li>Con tu usuario y contraseña</li>
-							<li>Registrate <a href="https://reprocann.msal.gob.ar/auth" target="_blank">Aquí</a></li>						
-						</ul>
-					</div>
-
-				</div>
-
-				<div class="galeria3 col-md-4">
-
-					<div class="foto">
-						<img src="../img/reprocann/paso3.jpg" alt="Paso3">
-					</div>
-
-					<div class="pie">
-						<p class="color-acento">Paso 3</p>
-						<ul>
-							<li>Selecciona la Preferencia de Cultivo:</li>
-							<li>Persona en tratamiento</li>
-							<li>Persona que cultiva para otro</li>						
-						</ul>
-					</div>
-
-				</div>
-
-				<div class="galeria4 col-md-4">
-
-					<div class="foto">
-						<img src="../img/reprocann/paso4.jpg" alt="Paso4">
-					</div>
-
-					<div class="pie">
-						<p class="color-acento">Paso 4</p>
-						<ul>
-							<li>Vinculación con Médico:</li>
-							<li>Utilizando el codigo generado por la App</li>
-							<li>Realiza la vinculación con un medico de confianza</li>
-													
-						</ul>
-					</div>
-
-				</div>
-
-				<div class="galeria5 col-md-4">
-
-					<div class="foto">
-						<img src="../img/reprocann/paso5.jpg" alt="Paso5">
-					</div>
-
-					<div class="pie">
-						<p class="color-acento">Listo!</p>					
-					</div>
-
-				</div>
-
-				<div class="galeria6 col-md-4">
-
-					<div class="foto">
-						<img src="../img/reprocann/paso6.jpg" alt="Paso6">
-					</div>
-
-					<div class="pie">
-						<p class="color-acento"><a href="../pages/contacto.html">Visítanos para abastecerte. Click Aquí</a></p>					
-					</div>
-
-				</div>
-			</div>
+			</section>
 		</div>
-		</section>
 
 		<section class="sectionbtn">
 			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
-		</section>	
-	</div>	
-
+		</section>
 	</main>		
 	<footer class="footer">
 		<div class="container__footer">
