--- a/index.html
+++ b/index.html
@@ -11,36 +11,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
 </head>
-<body>	
-	<!-- <header class="header">
-			<div class="nav__logo">
-				<a href="index.html"><img src="img/iconos/favicon.jpg" alt="Logo" class="container__logo-img"></a>
-			</div>
-
-			<div class="navigation">
-				<input type="checkbox" class="toggle-menu">
-		 		<div class="hamburguesa"></div>
-			
-				<ul class="menu">
-					<li class="active">					
-						<a href="index.html"><i class="fa-solid fa-house"></i>Inicio</a>
-					</li>
-					<li>					
-						<a href="pages/reprocann.html"><i class="fa-solid fa-cannabis"></i>Reprocann</a>
-					</li>
-					<li>
-						<a href="pages/tablas.html"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
-					</li>
-					<li>			
-						<a href="pages/sustratos.html"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
-					</li>
-					<li> 
-						<a href="pages/contacto.html"><i class="fa-solid fa-envelope"></i>Contacto</a>
-					</li>
-				</ul>
-			</div>
-	</header>	 -->	
-	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
+<body>		
+	<!-- Navegador -->
+	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark navbar-light col-12">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-2" href="index.html">Blunt <span class="color-acento">Growshop</span>
 			</a>
@@ -57,7 +30,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="pages/reprocann.html" class="nav-link"><i class="fa-solid fa-cannabis"></i>Reprocann
+						<a href="pages/reprocann.html" class="nav-link "><i class="fa-solid fa-cannabis"></i>Reprocann
 						</a>
 					</li>
 					<li class="nav-item">
@@ -75,31 +48,34 @@
 			</div>
 		</div>
 	</nav>
-	
-	<div class="row text-center">
-		<section class="section0 col-md-12">	
-			<h1>¿Quienes Somos?</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
-		</section>
+	<!-- Inicio Main -->
+	<main>	
+		<div class="row text-center">
+			<section class="section0 col-md-12">	
+				<h1>¿Quienes Somos?</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
+			</section>
 
-		<section class="section1 col-md-6">
-			<h2>Lorem, ipsum. </h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
-			<button class="boton">Click Aqui!</button>
-		</section>
+			<section class="section1 col-md-6">
+				<h2>Lorem, ipsum. </h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+				<button class="boton">Click Aqui!</button>
+			</section>
 
-		<section class="section2 col-md-6">
-			<img src="./img/catalogo/tablas-cultivo.png" alt="tablas cultivo" class="section2__img">
-			<h2>Lorem, ipsum. </h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
-		</section>
+			<section class="section2 col-md-6">
+				<img src="./img/catalogo/tablas-cultivo.png" alt="tablas cultivo" class="section2__img">
+				<h2>Lorem, ipsum. </h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+			</section>
 
-		<section class="section3 col-md-12">
-			<h2>Lorem, ipsum. </h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
-		</section>
+			<section class="section3 col-md-12">
+				<h2>Lorem, ipsum. </h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+			</section>
 
-	</div>
+		</div>
+	</main>
+	<!-- Inicia Footer -->
 	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo" alt="Blunt Growshop">	
@@ -121,6 +97,7 @@
 			</div>
 		</div>
 	</footer> 
+
 	<!--  Scripts -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
