Ultimos arreglos antes de cambiar los Lorems

--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -48,37 +48,35 @@
 		</div>
 	</nav>
 
-	<main>
-		<section id="growmix">
-			<div class="container__growmix">
-				<div class="growmix__video">
-					<video src="../videos/growmix1.mp4" autoplay controls loop muted width="500px" height="400px"></video>
+	<main class="sustratoMain">
+		<div class="container">
+				<div class="row">
+					<div class="container growmix__video col-md-3">
+						<video src="../videos/growmix1.mp4" autoplay controls loop muted></video>
+					</div>
+
+					<div class="growmix__caracteristicas col-md-3">
+						<h1>Growmix</h1>
+						<p>Caracteristicas:</p>
+						<ul>
+							<li>PH Corregido</li>										
+							<li>Turba y Perlita</li>
+							<li>Humedad 80%</li>									
+								<ul id="nutrientes">Macronutrientes:						
+									<li>Nitrogeno</li>
+									<li>Fosforo</li>
+									<li>Potasio</li>
+									<li>Magnesio</li>
+									<li>Calcio</li>												
+								</ul>
+						</ul>
+					</div>
 				</div>
-				<div class="growmix__caracteristicas">
-					<h1>Growmix</h1>
-					<p>Caracteristicas:</p>
-					<ul>
-						<li>PH Corregido</li>										
-						<li>Turba y Perlita</li>
-						<li>Humedad 80%</li>									
-							<ul id="nutrientes">Macronutrientes:						
-								<li>Nitrogeno</li>
-								<li>Fosforo</li>
-								<li>Potasio</li>
-								<li>Magnesio</li>
-								<li>Calcio</li>												
-							</ul>
-					</ul>
-				</div>
-			</div>
-		</section>
-
-
-		<section>
-			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
-		</section>
-
-	</main>
+			</div>		
+	</main>	
+	<section>
+		<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
+	</section>
 	<footer>
 		<div class="container__footer">
 			<div class="container__footer-titulo" alt="Blunt Growshop">	
