Compilando vars y ajustando colores

--- a/index.html
+++ b/index.html
@@ -53,24 +53,26 @@
 		<div class="row text-center">
 			<section class="section0 col-md-12">	
 				<h1>¿Quienes Somos?</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi maiores omnis id dolore earum voluptate consequuntur, molestias voluptates nulla fuga deserunt laudantium impedit mollitia beatae? Quam adipisci accusamus mollitia possimus.</p>
+				<p>Hola! somos un emprendimiento cannábico que nació en el 2018 con el objetivo de brindar y generar información sobre los usos y formatos de la planta de cannabis, asesorar sobre métodos de autocultivo y generar conciencia sobre el impacto que puede tener en nuestras vidas utilizarlo como herramienta en la gestión de nuestra salud física y psíquica.
+				
+				Bienvenidos a BluntGrowshop: un puente entre la información consciente y toda persona que quiera conocer más sobre Cannabis. </p>
 			</section>
 
 			<section class="section1 col-md-6">
-				<h2>Lorem, ipsum. </h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+				<h2>Abrimos Online </h2>
+				<p>Éste año innauguramos el Growshop Online, para abastecer a cultivadores experimentados y acompañar a quienes quieran sumergirse en el mundo del cannabis.</p>
 				<button class="boton">Click Aqui!</button>
 			</section>
 
 			<section class="section2 col-md-6">
 				<img src="./img/catalogo/tablas-cultivo.png" alt="tablas cultivo" class="section2__img">
-				<h2>Lorem, ipsum. </h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+				<h2>Informate </h2>
+				<p>Te invitamos a conocer sobre nuestros productos, información util y muchisimas cosas mas...</p>
 			</section>
 
 			<section class="section3 col-md-12">
-				<h2>Lorem, ipsum. </h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veniam, voluptas itaque nemo reprehenderit impedit deleniti soluta a adipisci consectetur ipsa ea explicabo facilis amet nihil aperiam placeat fugiat perspiciatis!</p>
+				<h2>Productos </h2>
+				<p>Contamos con todos los productos para tu cultivo y el disfrute de la cosecha!</p>
 			</section>
 
 		</div>
