--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -57,8 +57,7 @@
 		<div class="container">
 			<section class="sectionRepro1">
 					<h2>Así podes hacerlo:</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Suscipit expedita quia mollitia corrupti debitis ducimus facere enim. <br>
-					Dolorem quam, enim corrupti ullam maxime voluptates, eligendi sint vel veniam provident quos!</p>
+					<p>Recordate que nosotros podemos asesorarte en el proceso y acompañarte...</p>
 			</section>
 		</div>
 
