--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -71,7 +71,7 @@
 			
 			<div class="tabla__caracteristicas">
 				<h3 class="azteka">Tabla Azteka:</h3>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
+				<p>Fertilizante utilizado en cultivos Exteriores y para cultivadores con experiencia</p>
 			</div>	
 
 			<div class="container__tabla">
@@ -86,7 +86,7 @@
 		<section id="tabla__kawsay">
 			<div class="tabla__caracteristicas">
 				<h3 class="kawsay">Tabla Kawsay:</h3>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
+				<p>Utilizado practicamente en todos los ciclos de la planta, 100% recomendable, producto de calidad y eficiencia increibles</p>
 			</div>	
 			<div class="container__tabla">
 				<img src="../img/tablas/tabla-kawsay.jpg" alt="Tabla Kawsay">	
@@ -100,7 +100,7 @@
 		<section id="tabla__namaste">
 			<div class="tabla__caracteristicas">
 				<h3 class="namaste">Tabla Namaste:</h3>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
+				<p>Fertilizantes organicos de nivel intermedio, utilizado mucho en exteriores</p>
 			</div>	
 			<div class="container__tabla">
 				<img src="../img/tablas/tabla-namaste.jpg" alt="Tabla namaste">	
@@ -114,7 +114,7 @@
 		<section id="tabla__topcrop">
 			<div class="tabla__caracteristicas">
 				<h3 class="topcrop">Tabla Topcrop:</h3>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laudantium, corporis iure impedit odio libero possimus, in sint ipsa ut nesciunt quisquam minus repellat? Molestiae fugit magni neque voluptates fuga.</p>
+				<p>Una de las marcas mas reconocidas de Argentina tanto por su diseño como por la calidad de sus productos</p>
 			</div>	
 			<div class="container__tabla">
 				<img src="../img/tablas/tabla-topcrop.jpg" alt="Tabla topcrop">	
