--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BluntGrowshop - Sitio Oficial</title>
 	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
@@ -51,11 +51,9 @@
 	<!-- Inicio Main -->
 	<main>	
 		<div class="row text-center">
-			<section class="section0 col-md-12">	
-				<h1>¿Quienes Somos?</h1>
-				<p>Hola! somos un emprendimiento cannábico que nació en el 2018 con el objetivo de brindar y generar información sobre los usos y formatos de la planta de cannabis, asesorar sobre métodos de autocultivo y generar conciencia sobre el impacto que puede tener en nuestras vidas utilizarlo como herramienta en la gestión de nuestra salud física y psíquica.
-				
-				Bienvenidos a BluntGrowshop: un puente entre la información consciente y toda persona que quiera conocer más sobre Cannabis. </p>
+			<section class="section0 col-md-12 fs-4">	
+				<h1>Blunt Growshop</h1>
+				<p>Bienvenidos, estamos para asesorarte </p>
 			</section>
 
 			<section class="section1 col-md-6">
