--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
+	<meta name="keywords" content="growshop, blunt growshop, grow shop blunt, growshop blunt, reprocann">
+	<meta name="author" content="Brugnoni Nahuel">
+	
 	<title>BluntGrowshop - Sitio Oficial</title>
 	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
