Cambios de alts

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</section>
 
 			<section class="section2 col-md-6">
-				<img src="./img/catalogo/tablas-cultivo.png" alt="tablas cultivo" class="section2__img">
+				<img src="./img/catalogo/tablas-cultivo.png" alt="tablas de cultivo" class="section2__img">
 				<h2>Informate </h2>
 				<p>Te invitamos a conocer sobre nuestros productos, información util y muchisimas cosas mas...</p>
 			</section>
@@ -78,15 +78,15 @@
 	<!-- Inicia Footer -->
 	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo" alt="Blunt Growshop">	
-				<h3 alt="BluntGrowshop"> &copy; Blunt Grow Shop</p>
+			<div class="container__footer-titulo">	
+				<h3> &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-copyright" alt="Copyright Derechos Reservados">	
+			<div class="container__footer-copyright">	
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-redes" alt="Redes Sociales">
+			<div class="container__footer-redes">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
 					<img src="img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
