--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -166,15 +166,15 @@
 	</main>		
 	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo" alt="Blunt Growshop">	
-				<h3 alt="BluntGrowshop"> &copy; Blunt Grow Shop</p>
+			<div class="container__footer-titulo">	
+				<h> &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-copyright" alt="Copyright Derechos Reservados">	
+			<div class="container__footer-copyright">	
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-redes" alt="Redes Sociales">
+			<div class="container__footer-redes">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
 					<img src="../img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
@@ -184,7 +184,7 @@
 					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
-	</footer>
+	</footer> 
 		<!--  Script de fontawesome para los iconos -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
