--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -77,17 +77,17 @@
 	<section>
 		<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
 	</section>
-	<footer>
+	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo" alt="Blunt Growshop">	
-				<h3 alt="BluntGrowshop"> &copy; Blunt Grow Shop</p>
+			<div class="container__footer-titulo">	
+				<h> &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-copyright" alt="Copyright Derechos Reservados">	
+			<div class="container__footer-copyright">	
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-redes" alt="Redes Sociales">
+			<div class="container__footer-redes">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
 					<img src="../img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
