--- a/index.html
+++ b/index.html
@@ -35,25 +35,22 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="pages/reprocann.html" class="nav-link "><i class="fa-solid fa-cannabis"></i>Reprocann
-						</a>
+						<a href="pages/reprocann.html" class="nav-link "><i class="fa-solid fa-cannabis"></i>Reprocann</a>
 					</li>
 					<li class="nav-item">
 						<a href="pages/tablas.html" class="nav-link"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
 					</li>
 					<li class="nav-item">
-						<a href="pages/sustratos.html" class="nav-link"><i class="fa-solid fa-sack-xmark"></i>Sustratos
-						</a>
+						<a href="pages/sustratos.html" class="nav-link"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 					</li>
 					<li class="nav-item">
-					<a href="pages/contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
-					</a>
+						<a href="pages/contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	<!-- Inicio Main -->
+	<!-- Main -->
 	<main>	
 		<div class="row text-center">
 			<section class="section0 col-md-12 fs-4">	
