--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-		<meta name="keywords" content="growshop, blunt growshop, grow shop blunt, growshop blunt, reprocann">
+		<meta name="keywords" content="growshop, contacto, ubicacion, mapa, horarios">
 		<meta name="author" content="Brugnoni Nahuel">
 		<title>BluntGrowshop - Sitio Oficial</title>
 		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
@@ -15,15 +15,15 @@
 	
 	</head>
 <body>
+	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
 		<div class="container-fluid">
-			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
-			</a>
+			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span></a>
 
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-
-			<span class="navbar-toggler-icon "></span>
+				<span class="navbar-toggler-icon "></span>
 			</button>
+
 			<div class="collapse navbar-collapse text-center fs-4" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
 					<li class="nav-item">
@@ -43,14 +43,14 @@
 						</a>
 					</li>
 					<li class="nav-item">
-					<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
-					</a>
+						<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
+						</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	  
+	<!-- Main -->
 	<div class="grid__container">		
 		<section id="horarios" class="img-grid">
 			<div class="horarios__container">
@@ -97,7 +97,7 @@
 					</div>
 		</section>
 	</div>	
-
+	<!-- Footer -->
 	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo">	
