--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-		<meta name="keywords" content="growshop, blunt growshop, grow shop blunt, growshop blunt, reprocann">
+		<meta name="keywords" content="growshop, reprocann, inscripcion reprocann">
 		<meta name="author" content="Brugnoni Nahuel">
 		<title>BluntGrowshop - Sitio Oficial</title>
 		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
@@ -15,7 +15,7 @@
 	
 	</head>
 <body>
-
+	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
@@ -44,14 +44,14 @@
 						</a>
 					</li>
 					<li class="nav-item">
-					<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
-					</a>
+						<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
+						</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-
+	<!-- Main -->
 	<main class="main__repro">
 		<div class="container">
 			<section id="heroReprocann" alt="Header Reprocann" class="sectionRepro0"></section>		
@@ -167,6 +167,9 @@
 			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
 		</section>
 	</main>		
+
+	<!-- Footer -->
+
 	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo">	
