--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-		<meta name="keywords" content="growshop, blunt growshop, grow shop blunt, growshop blunt, reprocann">
+		<meta name="keywords" content="growshop, growmix, sustratos, cultivo">
 		<meta name="author" content="Brugnoni Nahuel">
 		<title>BluntGrowshop - Sitio Oficial</title>
 		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
@@ -15,6 +15,7 @@
 	
 	</head>
 <body>
+	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
@@ -43,14 +44,15 @@
 						</a>
 					</li>
 					<li class="nav-item">
-					<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
-					</a>
+						<a href="contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto
+						</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 
+	<!-- Main -->
 	<main class="sustratoMain">
 		<div class="container">
 				<div class="row">
@@ -77,9 +79,13 @@
 				</div>
 			</div>		
 	</main>	
+
+	<!-- Boton Volver Inicio -->
 	<section>
 		<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
 	</section>
+
+	<!-- Footer -->
 	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo">	
@@ -101,8 +107,7 @@
 			</div>
 		</div>
 	</footer> 
-		<!-- Fin de Pie de pagina -->
-	<!--  Script de fontawesome para los iconos -->
+	<!--  Scripts -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
