--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-		<meta name="keywords" content="growshop, contacto, ubicacion, mapa, horarios">
-		<meta name="author" content="Brugnoni Nahuel">
-		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
-		<link rel="stylesheet" href="../sass/style.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	
-	</head>
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
+	<meta name="keywords" content="growshop, contacto, ubicacion, mapa, horarios">
+	<meta name="author" content="Brugnoni Nahuel">
+	<title>BluntGrowshop - Sitio Oficial</title>
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<link rel="stylesheet" href="../sass/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
+</head>
+
 <body>
 	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span></a>
 
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon "></span>
 			</button>
 
@@ -51,7 +55,7 @@
 		</div>
 	</nav>
 	<!-- Main -->
-	<div class="grid__container">		
+	<div class="grid__container">
 		<section id="horarios" class="img-grid">
 			<div class="horarios__container">
 				<img src="../img/header/header-blunt.jpg" alt="ContactoBluntGrowshop" class="horarios__img">
@@ -59,52 +63,55 @@
 		</section>
 
 		<section class="horarios">
-				<h3>Horarios:</h3>
-				<p>De <span class="color-acento">Lunes </span>a <span class="color-acento">Sabados:</span></p>
-				<ul>
-					<li>10:00am a 13:00pm</li>
-					<li>17:00pm a 21:00pm</li>				
-				</ul>
+			<h3>Horarios:</h3>
+			<p>De <span class="color-acento">Lunes </span>a <span class="color-acento">Sabados:</span></p>
+			<ul>
+				<li>10:00am a 13:00pm</li>
+				<li>17:00pm a 21:00pm</li>
+			</ul>
 		</section>
 
 		<section id="mapa" class="mapa">
-					<h2>Encontranos en:</h2>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13619.16060409217!2d-64.5006161!3d-31.4199073!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2aed92fbeeed8bb1!2sBlunt%20Growshop!5e0!3m2!1ses-419!2sar!4v1661011268923!5m2!1ses-419!2sar" 
-							style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-					
+			<h2>Encontranos en:</h2>
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13619.16060409217!2d-64.5006161!3d-31.4199073!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2aed92fbeeed8bb1!2sBlunt%20Growshop!5e0!3m2!1ses-419!2sar!4v1661011268923!5m2!1ses-419!2sar"
+				style="border:0;" allowfullscreen="" loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 		</section>
 
-		<section class="form">				
-					<h2>Envianos tu mensaje:</h2>
-					<div class="container__form-items">
-						<div class="form__items">
-							<label for="name">Nombre:</label>
-							<input type="text" id="name" placeholder="Escribe tu nombre aquí:">	
-						</div>
-						<div class="form__items">
-							<label for="email">Email</label>
-							<input type="text" id="email" placeholder="Escribe tu email aquí:">								
-						</div>
-						<div class="form__items">
-							<label for="tel">Telefono:</label>
-							<input type="text" id="tel" placeholder="Escribe tu teléfono aquí:">							
-						</div>
-						<div class="form__caja">		
-							<textarea name="" id="mensaje" cols="30" rows="10" placeholder="Escribe tu mensaje aquí:"></textarea>
-						</div>
-						<input type="submit" value="Enviar" class="form__submit active">
-						<input type="reset" value="Cancelar" class="form__cancel active">		
-					</div>
+		<section class="form">
+			<h2>Envianos tu mensaje:</h2>
+			<div class="container__form-items">
+				<div class="form__items">
+					<label for="name">Nombre:</label>
+					<input type="text" id="name" placeholder="Escribe tu nombre aquí:">
+				</div>
+				<div class="form__items">
+					<label for="email">Email</label>
+					<input type="text" id="email" placeholder="Escribe tu email aquí:">
+				</div>
+				<div class="form__items">
+					<label for="tel">Telefono:</label>
+					<input type="text" id="tel" placeholder="Escribe tu teléfono aquí:">
+				</div>
+				<div class="form__caja">
+					<textarea name="" id="mensaje" cols="30" rows="10"
+						placeholder="Escribe tu mensaje aquí:"></textarea>
+				</div>
+				<input type="submit" value="Enviar" class="form__submit active">
+				<input type="reset" value="Cancelar" class="form__cancel active">
+			</div>
 		</section>
-	</div>	
+	</div>
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo">	
+			<div class="container__footer-titulo">
 				<h> &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-copyright" >	
+			<div class="container__footer-copyright">
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
@@ -118,9 +125,12 @@
 					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
-	</footer> 
-		<!--  Script de fontawesome para los iconos -->
-		<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>	
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+	</footer>
+	<!--  Script de fontawesome para los iconos -->
+	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
