--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo">	
-				<h3> &copy; Blunt Grow Shop</p>
+				<h3> &copy; Blunt Grow Shop</h3>
 			</div>
 
 			<div class="container__footer-copyright" >	
