--- a/pages/reprocann.html
+++ b/pages/reprocann.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-		<meta name="keywords" content="growshop, reprocann, inscripcion reprocann">
-		<meta name="author" content="Brugnoni Nahuel">
-		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
-		<link rel="stylesheet" href="../sass/style.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	
-	</head>
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
+	<meta name="keywords" content="growshop, reprocann, inscripcion reprocann">
+	<meta name="author" content="Brugnoni Nahuel">
+	<title>BluntGrowshop - Sitio Oficial</title>
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<link rel="stylesheet" href="../sass/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
+</head>
+
 <body>
 	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
@@ -21,9 +24,10 @@
 			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
 			</a>
 
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
-			<span class="navbar-toggler-icon "></span>
+				<span class="navbar-toggler-icon "></span>
 			</button>
 			<div class="collapse navbar-collapse text-center fs-4" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
@@ -54,13 +58,13 @@
 	<!-- Main -->
 	<main class="main__repro">
 		<div class="container">
-			<section id="heroReprocann" alt="Header Reprocann" class="sectionRepro0"></section>		
+			<section id="heroReprocann" alt="Header Reprocann" class="sectionRepro0"></section>
 		</div>
 
 		<div class="container">
 			<section class="sectionRepro1">
-					<h2>Así podes hacerlo:</h2>
-					<p>Recordate que nosotros podemos asesorarte en el proceso y acompañarte...</p>
+				<h2>Así podes hacerlo:</h2>
+				<p>Recordate que nosotros podemos asesorarte en el proceso y acompañarte...</p>
 			</section>
 		</div>
 
@@ -79,7 +83,8 @@
 							<p class="color-acento">Paso 1</p>
 							<ul>
 								<li>Crea un usuario en la APP MiArgentina</li>
-								<li>Ingresa <a href="https://www.argentina.gob.ar/miargentina" target="_blank"> Aquí</a></li>						
+								<li>Ingresa <a href="https://www.argentina.gob.ar/miargentina" target="_blank"> Aquí</a>
+								</li>
 							</ul>
 						</div>
 
@@ -95,7 +100,8 @@
 							<p class="color-acento">Paso 2</p>
 							<ul>
 								<li>Con tu usuario y contraseña</li>
-								<li>Registrate <a href="https://reprocann.msal.gob.ar/auth" target="_blank">Aquí</a></li>						
+								<li>Registrate <a href="https://reprocann.msal.gob.ar/auth" target="_blank">Aquí</a>
+								</li>
 							</ul>
 						</div>
 
@@ -112,7 +118,7 @@
 							<ul>
 								<li>Selecciona la Preferencia de Cultivo:</li>
 								<li>Persona en tratamiento</li>
-								<li>Persona que cultiva para otro</li>						
+								<li>Persona que cultiva para otro</li>
 							</ul>
 						</div>
 
@@ -130,7 +136,7 @@
 								<li>Vinculación con Médico:</li>
 								<li>Utilizando el codigo generado por la App</li>
 								<li>Realiza la vinculación con un medico de confianza</li>
-														
+
 							</ul>
 						</div>
 
@@ -143,7 +149,7 @@
 						</div>
 
 						<div class="pie">
-							<p class="color-acento">Listo!</p>					
+							<p class="color-acento">Listo!</p>
 						</div>
 
 					</div>
@@ -155,7 +161,8 @@
 						</div>
 
 						<div class="pie">
-							<p class="color-acento"><a href="../pages/contacto.html">Visítanos para abastecerte. Click Aquí</a></p>					
+							<p class="color-acento"><a href="../pages/contacto.html">Visítanos para abastecerte. Click
+									Aquí</a></p>
 						</div>
 
 					</div>
@@ -166,17 +173,17 @@
 		<section class="sectionbtn">
 			<button class="btn"><a href="../index.html"><i class="fa-solid fa-house"></i>Volver al Inicio</a></button>
 		</section>
-	</main>		
+	</main>
 
 	<!-- Footer -->
 
 	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo">	
+			<div class="container__footer-titulo">
 				<h> &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-copyright" >	
+			<div class="container__footer-copyright">
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
@@ -190,9 +197,12 @@
 					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
-	</footer> 
-		<!--  Script de fontawesome para los iconos -->
-	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+	</footer>
+	<!--  Script de fontawesome para los iconos -->
+	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
