--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-		<meta name="keywords" content="growshop, growmix, sustratos, cultivo">
-		<meta name="author" content="Brugnoni Nahuel">
-		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
-		<link rel="stylesheet" href="../sass/style.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	
-	</head>
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
+	<meta name="keywords" content="growshop, growmix, sustratos, cultivo">
+	<meta name="author" content="Brugnoni Nahuel">
+	<title>BluntGrowshop - Sitio Oficial</title>
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<link rel="stylesheet" href="../sass/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
+</head>
+
 <body>
 	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
@@ -21,9 +24,10 @@
 			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
 			</a>
 
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
-			<span class="navbar-toggler-icon "></span>
+				<span class="navbar-toggler-icon "></span>
 			</button>
 			<div class="collapse navbar-collapse text-center fs-4" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
@@ -55,30 +59,30 @@
 	<!-- Main -->
 	<main class="sustratoMain">
 		<div class="container">
-				<div class="row">
-					<div class="container growmix__video col-md-3">
-						<video src="../videos/growmix1.mp4" autoplay controls loop muted></video>
-					</div>
-
-					<div class="growmix__caracteristicas col-md-3">
-						<h1>Growmix</h1>
-						<p>Caracteristicas:</p>
-						<ul>
-							<li>PH Corregido</li>										
-							<li>Turba y Perlita</li>
-							<li>Humedad 80%</li>									
-								<ul id="nutrientes">Macronutrientes:						
-									<li>Nitrogeno</li>
-									<li>Fosforo</li>
-									<li>Potasio</li>
-									<li>Magnesio</li>
-									<li>Calcio</li>												
-								</ul>
-						</ul>
-					</div>
+			<div class="row">
+				<div class="container growmix__video col-md-3">
+					<video src="../videos/growmix1.mp4" autoplay controls loop muted></video>
 				</div>
-			</div>		
-	</main>	
+
+				<div class="growmix__caracteristicas col-md-3">
+					<h1>Growmix</h1>
+					<p>Caracteristicas:</p>
+					<ul>
+						<li>PH Corregido</li>
+						<li>Turba y Perlita</li>
+						<li>Humedad 80%</li>
+						<ul id="nutrientes">Macronutrientes:
+							<li>Nitrogeno</li>
+							<li>Fosforo</li>
+							<li>Potasio</li>
+							<li>Magnesio</li>
+							<li>Calcio</li>
+						</ul>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</main>
 
 	<!-- Boton Volver Inicio -->
 	<section>
@@ -88,11 +92,11 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo">	
+			<div class="container__footer-titulo">
 				<h> &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-copyright ">	
+			<div class="container__footer-copyright ">
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
@@ -106,9 +110,12 @@
 					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
-	</footer> 
+	</footer>
 	<!--  Scripts -->
-	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
