--- a/pages/tablas.html
+++ b/pages/tablas.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-		<meta name="keywords" content="growshop, tablas de cultivo, cultivo, kawsay, topcrop, azteka, namaste">
-		<meta name="author" content="Brugnoni Nahuel">
-		<title>BluntGrowshop - Sitio Oficial</title>
-		<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
-		<link rel="stylesheet" href="../sass/style.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	
-	</head>
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
+	<meta name="keywords" content="growshop, tablas de cultivo, cultivo, kawsay, topcrop, azteka, namaste">
+	<meta name="author" content="Brugnoni Nahuel">
+	<title>BluntGrowshop - Sitio Oficial</title>
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<link rel="stylesheet" href="../sass/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
+</head>
+
 <body>
 	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark col-12">
@@ -21,9 +24,10 @@
 			<a class="navbar-brand fs-2" href="../index.html">Blunt <span class="color-acento">Growshop</span>
 			</a>
 
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
-			<span class="navbar-toggler-icon "></span>
+				<span class="navbar-toggler-icon "></span>
 			</button>
 			<div class="collapse navbar-collapse text-center fs-4" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
@@ -57,7 +61,9 @@
 		<section id="tabla">
 			<table>
 				<tr>
-					<td colspan="4"><h1>Tablas de cultivo</h1></td>
+					<td colspan="4">
+						<h1>Tablas de cultivo</h1>
+					</td>
 				</tr>
 				<tr>
 					<td><a href="../pages/tablas.html#tabla__azteka">Tabla Azteka</a></td>
@@ -67,67 +73,73 @@
 				</tr>
 			</table>
 		</section>
-		
+
 		<section id="tabla__img-header">
 			<img src="../img/catalogo/tablas-cultivo.png" alt="Tablas de cultivo">
 		</section>
 
 		<section id="tabla__azteka">
-			
+
 			<div class="tabla__caracteristicas">
 				<h3 class="azteka">Tabla Azteka:</h3>
 				<p>Fertilizante utilizado en cultivos Exteriores y para cultivadores con experiencia</p>
-			</div>	
+			</div>
 
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-azteka.jpg" alt="Tabla azteka">	
+				<img src="../img/tablas/tabla-azteka.jpg" alt="Tabla azteka">
 			</div>
 		</section>
 
 		<section>
-			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i
+						class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section id="tabla__kawsay">
 			<div class="tabla__caracteristicas">
 				<h3 class="kawsay">Tabla Kawsay:</h3>
-				<p>Utilizado practicamente en todos los ciclos de la planta, 100% recomendable, producto de calidad y eficiencia increibles</p>
-			</div>	
+				<p>Utilizado practicamente en todos los ciclos de la planta, 100% recomendable, producto de calidad y
+					eficiencia increibles</p>
+			</div>
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-kawsay.jpg" alt="Tabla Kawsay">	
+				<img src="../img/tablas/tabla-kawsay.jpg" alt="Tabla Kawsay">
 			</div>
 		</section>
 
 		<section>
-			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i
+						class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section id="tabla__namaste">
 			<div class="tabla__caracteristicas">
 				<h3 class="namaste">Tabla Namaste:</h3>
 				<p>Fertilizantes organicos de nivel intermedio, utilizado mucho en exteriores</p>
-			</div>	
+			</div>
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-namaste.jpg" alt="Tabla namaste">	
+				<img src="../img/tablas/tabla-namaste.jpg" alt="Tabla namaste">
 			</div>
 		</section>
 
 		<section>
-			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i
+						class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section id="tabla__topcrop">
 			<div class="tabla__caracteristicas">
 				<h3 class="topcrop">Tabla Topcrop:</h3>
-				<p>Una de las marcas mas reconocidas de Argentina tanto por su diseño como por la calidad de sus productos</p>
-			</div>	
+				<p>Una de las marcas mas reconocidas de Argentina tanto por su diseño como por la calidad de sus
+					productos</p>
+			</div>
 			<div class="container__tabla">
-				<img src="../img/tablas/tabla-topcrop.jpg" alt="Tabla topcrop">	
+				<img src="../img/tablas/tabla-topcrop.jpg" alt="Tabla topcrop">
 			</div>
 		</section>
 
 		<section>
-			<button class="btn"><a href="../pages/tablas.html#tabla"><i class="fa-solid fa-angle-up"></i>Volver</a></button>
+			<button class="btn"><a href="../pages/tablas.html#tabla"><i
+						class="fa-solid fa-angle-up"></i>Volver</a></button>
 		</section>
 
 		<section>
@@ -139,11 +151,11 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo">	
+			<div class="container__footer-titulo">
 				<h> &copy; Blunt Grow Shop</p>
 			</div>
 
-			<div class="container__footer-copyright" >	
+			<div class="container__footer-copyright">
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
@@ -157,10 +169,13 @@
 					<img src="../img/iconos/image.png" alt="Seguinos en Instagram"></a>
 			</div>
 		</div>
-	</footer> 
+	</footer>
 	<!--  Scripts -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
-		
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
