--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,7 +108,7 @@
 	<footer class="footer">
 		<div class="container__footer">
 			<div class="container__footer-titulo">
-				<h> &copy; Blunt Grow Shop</p>
+				<h3>&copy; Blunt Grow Shop</h3>
 			</div>
 
 			<div class="container__footer-copyright">
