--- a/pages/sustratos.html
+++ b/pages/sustratos.html
@@ -71,7 +71,8 @@
 						<li>PH Corregido</li>
 						<li>Turba y Perlita</li>
 						<li>Humedad 80%</li>
-						<ul id="nutrientes">Macronutrientes:
+						<li>Macronutrientes:</li>
+						<ul id="nutrientes">
 							<li>Nitrogeno</li>
 							<li>Fosforo</li>
 							<li>Potasio</li>
