--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia">
-	<meta name="keywords" content="growshop, blunt growshop, grow shop blunt, growshop blunt, reprocann">
-	<meta name="author" content="Brugnoni Nahuel">
-	
-	<title>BluntGrowshop - Sitio Oficial</title>
-	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">	
-	<link rel="stylesheet" href="sass/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<meta name="description" content="Venta por mayor y por menor de articulos de cultivo y parafernalia" />
+	<meta name="keywords" content="growshop, blunt growshop, grow shop blunt, growshop blunt, reprocann" />
+	<meta name="author" content="Brugnoni Nahuel" />
+
+	<title>BluntGrowshop - Sitio Oficial</title>
+	<link rel="shortcut icon" href="img/iconos/favicon.jpg" type="image/x-icon" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+	<link rel="stylesheet" href="sass/style.css" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 </head>
-<body>		
+
+<body>
 	<!-- Navegador -->
 	<nav class="navbar navbar-expand-lg bg-growshop navbar-dark navbar-light col-12">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-2" href="index.html">Blunt <span class="color-acento">Growshop</span>
 			</a>
 
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-
-			<span class="navbar-toggler-icon "></span>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse text-center fs-4" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
@@ -35,73 +37,88 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="pages/reprocann.html" class="nav-link "><i class="fa-solid fa-cannabis"></i>Reprocann</a>
+						<a href="pages/reprocann.html" class="nav-link"><i
+								class="fa-solid fa-cannabis"></i>Reprocann</a>
 					</li>
 					<li class="nav-item">
-						<a href="pages/tablas.html" class="nav-link"><i class="fa-solid fa-table"></i>Tablas de cultivo</a>
+						<a href="pages/tablas.html" class="nav-link"><i class="fa-solid fa-table"></i>Tablas de
+							cultivo</a>
 					</li>
 					<li class="nav-item">
-						<a href="pages/sustratos.html" class="nav-link"><i class="fa-solid fa-sack-xmark"></i>Sustratos</a>
+						<a href="pages/sustratos.html" class="nav-link"><i
+								class="fa-solid fa-sack-xmark"></i>Sustratos</a>
 					</li>
 					<li class="nav-item">
-						<a href="pages/contacto.html" class="nav-link"><i class="fa-solid fa-envelope "></i>Contacto</a>
+						<a href="pages/contacto.html" class="nav-link"><i class="fa-solid fa-envelope"></i>Contacto</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<!-- Main -->
-	<main>	
+	<main>
 		<div class="row text-center">
-			<section class="section0 col-md-12 fs-4">	
+			<section class="section0 col-md-12 fs-4">
 				<h1>Blunt Growshop</h1>
-				<p>Bienvenidos, estamos para asesorarte </p>
+				<p>Bienvenidos, estamos para asesorarte</p>
 			</section>
 
 			<section class="section1 col-md-6">
-				<h2>Abrimos Online </h2>
-				<p>Éste año innauguramos el Growshop Online, para abastecer a cultivadores experimentados y acompañar a quienes quieran sumergirse en el mundo del cannabis.</p>
+				<h2>Abrimos Online</h2>
+				<p>
+					Éste año innauguramos el Growshop Online, para abastecer a
+					cultivadores experimentados y acompañar a quienes quieran sumergirse
+					en el mundo del cannabis.
+				</p>
 				<button class="boton">Click Aqui!</button>
 			</section>
 
 			<section class="section2 col-md-6">
-				<img src="./img/catalogo/tablas-cultivo.png" alt="tablas de cultivo" class="section2__img">
-				<h2>Informate </h2>
-				<p>Te invitamos a conocer sobre nuestros productos, información util y muchisimas cosas mas...</p>
+				<img src="./img/catalogo/tablas-cultivo.png" alt="tablas de cultivo" class="section2__img" />
+				<h2>Informate</h2>
+				<p>
+					Te invitamos a conocer sobre nuestros productos, información util y
+					muchisimas cosas mas...
+				</p>
 			</section>
 
 			<section class="section3 col-md-12">
-				<h2>Productos </h2>
-				<p>Contamos con todos los productos para tu cultivo y el disfrute de la cosecha!</p>
+				<h2>Productos</h2>
+				<p>
+					Contamos con todos los productos para tu cultivo y el disfrute de la
+					cosecha!
+				</p>
 			</section>
-
 		</div>
 	</main>
 	<!-- Inicia Footer -->
 	<footer class="footer">
 		<div class="container__footer">
-			<div class="container__footer-titulo">	
-				<h3> &copy; Blunt Grow Shop</h3>
+			<div class="container__footer-titulo">
+				<h3>&copy; Blunt Grow Shop</h3>
 			</div>
 
-			<div class="container__footer-copyright" >	
+			<div class="container__footer-copyright">
 				<p>Copyright &copy; Blunt Grow Shop</p>
 			</div>
 
 			<div class="container__footer-redes">
 				<p>Seguinos en redes:</p>
 				<a href="https://facebook.com" target="_blank">
-					<img src="img/iconos/facebook.png" alt="Seguinos en Facebook"></a>
+					<img src="img/iconos/facebook.png" alt="Seguinos en Facebook" /></a>
 				<a href="https://twitter.com" target="_blank">
-					<img src="img/iconos/twitter.png" alt="Seguinos en Twitter"></a>
+					<img src="img/iconos/twitter.png" alt="Seguinos en Twitter" /></a>
 				<a href="https://www.instagram.com/growshopblunt/" target="_blank">
-					<img src="img/iconos/image.png" alt="Seguinos en Instagram"></a>
+					<img src="img/iconos/image.png" alt="Seguinos en Instagram" /></a>
 			</div>
 		</div>
-	</footer> 
+	</footer>
 
 	<!--  Scripts -->
 	<script src="https://kit.fontawesome.com/59785414e0.js" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
